--- a/Lesson-2/Homework/task1.html
+++ b/Lesson-2/Homework/task1.html
@@ -23,8 +23,16 @@
     бассейн.
 </p>
 
-<p><address>Тасмания вызывает материк.</address> Независимое государство, по определению, применяет городской музей под открытым небом.
+<p>
+    <mark>Тема: «Туристический вечнозеленый кустарник в XXI веке»</mark>
+<address>Тасмания вызывает материк.</address>
+<q>Независимое государство</q>,
+<blockquote cite="http://referats.yandex.ru/referats/?t=geography&s=79558">по определению, применяет городской музей под
+    открытым небом.
     Льежский оружейник, при том, что королевские полномочия находятся в руках исполнительной власти - кабинета
-    министров, точно связывает традиционный средиземноморский кустарник.</p>
+    министров, точно связывает традиционный средиземноморский кустарник.
+</blockquote>
+</p>
+<p><abbr title="The Union of European Football Associations">UEFA</abbr></p>
 </body>
 </html>
