--- a/Lesson-2/Homework/task4.html
+++ b/Lesson-2/Homework/task4.html
@@ -6,9 +6,14 @@
 </head>
 <body>
     <ul>
-        <li><a href=""></a></li>
-        <li></li>
-        <li></li>
+        <li><a href="http://kosoryho.github.io/Lesson-2/Homework/task1.html">task1</a></li>
+        <li><a href="http://kosoryho.github.io/Lesson-2/Homework/task2.html">task2</a></li>
+        <li><a href="http://kosoryho.github.io/Lesson-2/Homework/task3.html">task3</a></li>
     </ul>
+    <p><strong>Спутники некоторых планет</strong></p>
+    <ul></ul>
+    <ul></ul>
+    <ul></ul>
+    <ul></ul>
 </body>
 </html>
