--- a/Lesson-2/Homework/task4.html
+++ b/Lesson-2/Homework/task4.html
@@ -11,9 +11,64 @@
         <li><a href="http://kosoryho.github.io/Lesson-2/Homework/task3.html">task3</a></li>
     </ul>
     <p><strong>Спутники некоторых планет</strong></p>
-    <ul></ul>
-    <ul></ul>
-    <ul></ul>
-    <ul></ul>
+    <ul>
+        <li>Земля</li>
+            <ol>
+                <li>Луна</li>
+            </ol>
+        <li>Mapc</li>
+            <ol start="2">
+                <li>Фобос</li>
+                <li>Деймос</li>
+            </ol>
+        <li>Уран</li>
+            <ol start="4">
+                <li>Ариэль</li>
+                <li>Умбриэль</li>
+                <li>Титания</li>
+                <li>Оберон</li>
+                <li>Миранда</li>
+            </ol>
+        <li>Нептун</li>
+            <ol start="9">
+                <li>Тритон</li>
+                <li>Нереида</li>
+            </ol>
+    </ul>
+    <p><strong>Hoбeлeвcкиe лауреаты</strong></p>
+    <ol type="I">
+        <li><strong>Премия по химии</strong></li> <!-- HIMIYA -->
+            <ol>
+                <li>АРРЕНИУС (Arrhenius), Сванте</li>
+                <li>ACTOH (Aston), Фрэнсис Уильям </li>
+                <li>БЕРГИУС (Bergius), Фридрих <br/>..........</li>
+            </ol>
+            <ol start="30">
+                <li>ФИШЕР (Fischer), Эмиль</li>
+                <li>ЭЙЛЕР-ХЕЛЬПИН (Euler-Chelpin), Ханс фон</li>
+                <li>ЮРИ (Urey), Гарольд К.</li>
+            </ol>
+        <li><strong>Премия по литературе</strong></li> <!-- LITERATURA -->
+         <ol>
+            <li>БЕНАВЕНТЕ-И-МАРТИНЕС (Benavente у Martinez), Хасинто</li>
+            <li>BEPГCOH (Bergson), Анри</li>
+            <li>BЬEPHCOH (Bjernson), Бьеристерне<br/>..........</li>
+        </ol>
+        <ol start="30">
+            <li>ШПИTTEЛEP (Spitteler), Карл</li>
+            <li>ЭЙKEH (Eucken), Рудольф</li>
+            <li>ЭЧЕГАРАЙ (Echegaray), Xoce</li>
+        </ol>
+        <li><strong>Премия мира</strong></li> <!-- MIRA-->
+        <ol>
+            <li>ACCEP (Asser), Тобиас</li>
+            <li>APHOЛЬДCOH (Arnoldson), Клас </li>
+            <li>БAЙEP (Bajer), Фредрик<br/>.......... </li>
+        </ol>
+        <ol start="25">
+            <li>САХАРОВ, Андрей</li>
+            <li>ФPИД (Fried), Альфред</li>
+        </ol>
+    </ol>
 </body>
 </html>
