--- a/GoFE/Lesson-4/Homework/task3.html
+++ b/GoFE/Lesson-4/Homework/task3.html
@@ -11,7 +11,7 @@
         <li>prev</li>
         <li class="button">1</li>
         <li class="button">2</li>
-        <li>...</li>
+        <li><sub>...</sub></li>
         <li class="button">5</li>
         <li class="button">6</li>
         <li class="button">7</li>
