--- a/GoFE/Lesson-4/Homework/task3.html
+++ b/GoFE/Lesson-4/Homework/task3.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div>
-        <li>first</li>
-        <li>prev</li>
+        <li>&#171 first</li>
+        <li>&#171 prev</li>
         <li class="button">1</li>
         <li class="button">2</li>
         <li><sub>...</sub></li>
@@ -17,8 +17,8 @@
         <li class="button">7</li>
         <li class="button">8</li>
         <li class="button">9</li>
-        <li>next</li>
-        <li>last</li>
+        <li>next &#187</li>
+        <li>last &#187</li>
     </div>
 </body>
 </html>
