--- a/GoFE/Lesson-5/Homework/task1.html
+++ b/GoFE/Lesson-5/Homework/task1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>task1</title>
     <link rel="stylesheet" href="task1.css">
 </head>
 <body>
