--- a/GoFE/Lesson-5/Homework/task2.html
+++ b/GoFE/Lesson-5/Homework/task2.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>task2</title>
-    <link rel="stylesheet" href="task2.css">
+    <link rel="stylesheet" href="task1.css">
 </head>
 <body>
-<div class="main">
-    <h2>BEST VALUE</h2>
+<div class="price-main">
+    <h2 class="price-title">BEST VALUE</h2>
 
     <div class="inner">
-        <h2>ICONIC GRAPHICS</h2>
+        <h2 class="inner-title">ICONIC GRAPHICS</h2>
 
         <p><span class="top-index">$</span>25<span class="bot-index">Monthly</span></p>
         <ul>
@@ -19,7 +19,7 @@
             <li>Staging or Production</li>
             <li>Unlimited e-Mails</li>
         </ul>
-        <div class="button">Enroll Today</div>
+        <div class="button-orange">Enroll Today</div>
     </div>
 </div>
 </body>
