--- a/GoFE/Lesson-8/Homework/task3.html
+++ b/GoFE/Lesson-8/Homework/task3.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Full page</title>
     <link rel="stylesheet" href="task3.css">
-    <link rel="stylesheet" href="../../Lesson-6/Homework/task1.css"/>
-    <link rel="stylesheet" href="../../Lesson-6/Homework/task2.css"/>
+<!--Clear both-->
 </head>
 <body>
 <div class="header">
