--- a/GoFE/Lesson-8/Homework/task3.html
+++ b/GoFE/Lesson-8/Homework/task3.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Full page</title>
     <link rel="stylesheet" href="task3.css">
-<!--Clear both-->
+    <<<<<<< HEAD
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,500,600,800' rel='stylesheet'
+          type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Futura:400italic,600italic,400,600,800' rel='stylesheet'
+          type='text/css'>
+    =======
+    <!--Clear both-->
+    >>>>>>> origin/master
 </head>
 <body>
 <div class="header">
@@ -59,14 +65,25 @@
     </div>
 </div>
 <div class="middle-section">
-    <p class="middle-section_header"></p>
+    <div class="middle-section_container">
+        <p class="middle-section_header">LOREM IPSUM IS SIMPLY DUMMY TEXT OF THE PRINTING
+            AND TYPESETTING INDUSTRY. LOREM IPSUM HAS BEEN....</p>
 
-    <p class="middle-section_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    <ul class="middle-section_list">
-        <li class="middle-section_list_item"></li>
-        <li class="middle-section_list_item"></li>
-        <li class="middle-section_list_item"></li>
-    </ul>
+        <p class="middle-section_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <ul class="middle-section_list">
+            <li class="middle-section_list_item">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and
+                typesetting industry.
+            </li>
+            <li class="middle-section_list_item">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text.
+            </li>
+            <li class="middle-section_list_item">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and
+                typesetting industry.
+            </li>
+        </ul>
+    </div>
 </div>
 <div class="offer">
     <p class="title">We have a very flexible offers for you to choose</p>
