--- a/GoFE/Lesson-8/Homework/task3.html
+++ b/GoFE/Lesson-8/Homework/task3.html
@@ -3,14 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="task3.css">
-    <<<<<<< HEAD
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,500,600,800' rel='stylesheet'
           type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Futura:400italic,600italic,400,600,800' rel='stylesheet'
           type='text/css'>
-    =======
-    <!--Clear both-->
-    >>>>>>> origin/master
+
 </head>
 <body>
 <div class="header">
@@ -170,6 +167,9 @@
         </div>
     </div>
 </div>
-
+<div class="contacts">
+    <div class="contacts_waraper"></div>
+    <div class="contacts_map"></div>
+</div>
 </body>
 </html>
