--- a/GoFE/Lesson-8/Homework/task3.html
+++ b/GoFE/Lesson-8/Homework/task3.html
@@ -68,15 +68,20 @@
 
         <p class="middle-section_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         <ul class="middle-section_list">
-            <li class="middle-section_list_item">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and
+            <li class="middle-section_list_item">Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+                Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing
+                and
                 typesetting industry.
             </li>
-            <li class="middle-section_list_item">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            <li class="middle-section_list_item">Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
                 Lorem Ipsum has been the industry's standard dummy text.
             </li>
-            <li class="middle-section_list_item">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and
+            <li class="middle-section_list_item">Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+                Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing
+                and
                 typesetting industry.
             </li>
         </ul>
@@ -168,8 +173,32 @@
     </div>
 </div>
 <div class="contacts">
-    <div class="contacts_waraper"></div>
-    <div class="contacts_map"></div>
+    <div class="contacts_container">
+        <p class="contacts_company">Iconic Graphics
+
+        <p class="contacts_address">123 Main Street</p>
+
+        <p class="contacts_side">EastWest</p>
+
+        <p class="contacts_post">LHR 54500</p>
+
+        <p class="contacts_phone">012.345.6789</p>
+
+        <p class="contacts_email">info@iconicgraphics.com</p>
+        <div class="contacts_social">
+            <div class="contacts_social_item fb"></div>
+            <div class="contacts_social_item tw"></div>
+            <div class="contacts_social_item in"></div>
+        </div>
+    </div>
+    <div class="contacts_map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2541.1103657481567!2d30.498883400000008!3d50.4390449!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef1dad747f1%3A0x520c319cb361053e!2z0LLRg9C7LiDQltC40LvRj9C90YHRjNC60LAsIDc1LCDQmtC40ZfQsg!5e0!3m2!1sru!2sua!4v1429785148055"
+                width="100%" height="345" frameborder="0" style="border:0"></iframe>
+    </div>
 </div>
+<footer>
+    <p class="footer_copyright">Copyright &#169 <span>Company Name.</span> All rights reserved.</p>
+    <p class="footer_designed">Designed by <span>IconicGraphics.com</span></p>
+</footer>
 </body>
 </html>
