--- a/GoFE/Project 2/index.html
+++ b/GoFE/Project 2/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <title>Project 2</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="adaptive.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
 <header>
     <div class="center clearfix">
-        <a href="" class="logo">
-            <img src="images/logo.png" alt="logo" title="abc university"/>
+        <a href="" class="company">
+            <img src="images/logo.png" alt="" title="abc university" class="company_logo"/>
+
+            <div class="company_name">ABC University</div>
         </a>
 
         <div class="connect-us">
@@ -37,37 +40,151 @@
             <p class="banner_text">College students can publish their couse notes, study together, build their acdemic
                 reputations....</p>
         </div>
+        <div class="banner_form">
+            <div class="statement">
+                <h2 class="form_header">Get Started</h2>
+
+                <form action="">
+                    <div class="field-group">
+                        <select name="" class="form_item">
+                            <option value="Select Course">Select Course</option>
+                            <option value="Select Course2">Select Course2</option>
+                            <option value="Select Course2">Select Course3</option>
+                        </select>
+                    </div>
+                    <div class="field-group">
+                        <input type="text" name="" class="form_item" placeholder="Frist Name"/>
+                    </div>
+                    <div class="field-group">
+                        <input type="text" name="" class="form_item" placeholder="Last Name"/>
+                    </div>
+                    <div class="field-group">
+                        <input type="text" name="" class="form_item" placeholder="Phone"/>
+                    </div>
+                    <div class="field-group">
+                        <textarea name="" cols="30" rows="3" class="form_item" placeholder="Adress"></textarea>
+                    </div>
+                    <div class="field-group">
+                        <input type="text" name="" class="form_item" placeholder="Zip"/>
+                    </div>
+                    <div class="field-group">
+                        <input type="text" name="" class="form_item" placeholder="Email"/>
+                    </div>
+                    <button type="submit" class="statement_button">Submit</button>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
-<div class="statement">
-    <h2 class="form_header">Get Started</h2>
-    <form action="">
-        <div class="field-group">
-            <select name="" id="" class="form_item">
-                <option value="Select Course">Select Course</option>
-                <option value="Select Course2">Select Course2</option>
-                <option value="Select Course2">Select Course3</option>
-            </select>
+<div class="about">
+    <div class="center clearfix">
+        <div class="about_wrapper">
+            <h3 class="about_header">ABC University</h3>
+
+            <p class="about_paragraph">In 1865, Ezra Cornell founded an institution "where any person can find
+                instruction
+                in any study." From the beginning, all students were welcome, regardless of race, gender, ideology, or
+                socioeconomic status.</p>
+
+            <p class="about_paragraph">Today, we invite you to join our talented and diverse students and accessible
+                faculty
+                who, together, form a living and learning community unmatched in its breadth of opportunities.</p>
         </div>
-        <div class="field-group">
-            <input type="text" name="" id="" class="form_item" placeholder="Frist Name"/>
-        </div>
-        <div class="field-group">
-            <input type="text" name="" id="" class="form_item" placeholder="Last Name"/>
-        </div>
-        <div class="field-group">
-            <input type="text" name="" id="" class="form_item" placeholder="Phone"/>
-        </div>
-        <div class="field-group">
-            <textarea name="" id="" cols="30" rows="3" class="form_item" placeholder="Adress"></textarea>
-        </div>
-        <div class="field-group">
-            <input type="text" name="" id="" class="form_item" placeholder="Zip"/>
-        </div>
-        <div class="field-group">
-            <input type="text" name="" id="" class="form_item" placeholder="Email"/>
-        </div>
-        <button type="submit" class="statement_button">Submit</button>
-    </form>
+    </div>
 </div>
+<div class="point">
+    <div class="center clearfix">
+        <h2 class="point_header">why we are best</h2>
+
+        <div class="point_item"><img src="images/point1.jpg" alt="" class="point_item_img"/>
+
+            <h3 class="point_item_header">Quality environment</h3>
+
+            <p class="point_item_text">We guide our students to find their own academic paths by helping them to reason,
+                analyze and understand in unprecedented ways. The undergraduate experience at Duke is characterized by a
+                spirit of academic energy, exploration and challenge.</p>
+
+            <a href="" class="point_item_button">View</a>
+        </div>
+        <div class="point_item"><img src="images/point2.jpg" alt="" class="point_item_img"/>
+
+            <h3 class="point_item_header">Quality programs</h3>
+
+            <p class="point_item_text">We are a research university with resources to connect undergraduate education to
+                the processes of inquiry and discovery. Duke students explore ideas by collaborating directly with our
+                exceptional faculty in a program of study that focuses on interdisciplinary exploration.</p>
+
+            <a href="" class="point_item_button">View</a>
+        </div>
+        <div class="point_item"><img src="images/point3.jpg" alt="" class="point_item_img"/>
+
+            <h3 class="point_item_header">Excellent teachers</h3>
+
+            <p class="point_item_text">A student's education doesn't end at the classroom door. We provide an incredible
+                variety of opportunities for students to enhance and supplement in-class learning with hands-on
+                experiences, service in the community—both locally and globally—and development of leadership
+                skills.</p>
+
+            <a href="" class="point_item_button">View</a>
+        </div>
+    </div>
+</div>
+<div class="comments">
+    <div class="comments_top">
+        <div class="center clearfix">
+            <h2 class="comments_header">What Students Says About Our University</h2>
+
+            <div class="comments_navigation">
+                <div class="comments_navigation_button">
+                    <a href="" class="button_left"></a>
+                </div>
+                <div class="comments_navigation_button">
+                    <a href="" class="button_right"></a>
+                </div>
+            </div>
+            <div class="comments_wrapper">
+                <p class="comments_paragraph">We guide our students to find their own academic paths by helping them to
+                    reason, analyze and understand in unprecedented ways. The undergraduate experience at Duke is
+                    characterized by a spirit of academic energy, exploration and challenge.</p>
+
+                <p class="comments_person">— Amanda Persch</p>
+            </div>
+        </div>
+    </div>
+    <div class="comments_bottom">
+        <div class="center clearfix">
+            <a href="" class="get_started_button">
+                <div class="get_started_text">Click Here Now to Get Started</div>
+            </a>
+            <div class="comments_photo"></div>
+        </div>
+    </div>
+</div>
+<footer>
+    <div class="center clearfix">
+        <a href="" class="company">
+            <img src="images/logo.png" alt="" title="abc university" class="company_logo"/>
+
+            <div class="company_name">ABC University</div>
+        </a>
+
+        <div class="connect-us">
+            <div class="social_connect">Connect:</div>
+            <ul class="social">
+                <li class="social">
+                    <a href="#" class="fa fa-facebook"></a>
+                </li>
+                <li class="social">
+                    <a href="#" class="fa fa-google-plus"></a>
+                </li>
+                <li class="social">
+                    <a href="#" class="fa fa-twitter"></a>
+                </li>
+            </ul>
+
+        </div>
+        <p class="created">© 2014 by ABC UNIVERSITY OF LIFE. Proudly created with unbounce.com. Design by
+            Design-What.com</p>
+    </div>
+</footer>
 </body>
