--- a/GoFE/Project 2/index.html
+++ b/GoFE/Project 2/index.html
@@ -156,7 +156,7 @@
             <a href="" class="get_started_button">
                 <div class="get_started_text">Click Here Now to Get Started</div>
             </a>
-            <div class="comments_photo"></div>
+            <img src="images/comments_img.png" class="comments_photo">
         </div>
     </div>
 </div>
