--- a/GoFE/Project 1/index.html
+++ b/GoFE/Project 1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="task3.css">
+    <link rel="stylesheet" href="main.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,500,600,800' rel='stylesheet'
           type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Futura:400italic,600italic,400,600,800' rel='stylesheet'
