--- a/GoJS/Lesson-2/homework/task.html
+++ b/GoJS/Lesson-2/homework/task.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
+<!doctype html>
+<html lang="ru">
+<head>
     <meta charset="UTF-8">
     <title></title>
     <script src="task.js"></script>
