--- a/Task Jooble/index.html
+++ b/Task Jooble/index.html
@@ -16,7 +16,7 @@
         <input type="text" name="" class="offer__form" placeholder="Name"/>
         <input type="email" name="" class="offer__form offer__form-email" placeholder="Email"/>
 
-        <div class="offer__button">book now</div>
+        <div class="offer__button">book now!</div>
         <div class="offer__comment"></div>
     </div>
 </div>
