--- a/Task Jooble/index.html
+++ b/Task Jooble/index.html
@@ -3,21 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Jooble task</title>
-    <link rel="stylesheet" href="main.css">
-
+    <link rel="stylesheet" href="css/main.css">
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
 <div class="offer">
     <div class="offer__wraper">
-        <h2 class="offer__header">test our brand new ktm duke bike</h2>
+        <h2 class="offer__header offer__text">test our brand new ktm duke bike</h2>
 
-        <p class="offer__text">Book your test drive now!</p>
+        <p class="offer__paragraph offer__text">Book your test drive now!</p>
 
         <input type="text" name="" class="offer__form" placeholder="Name"/>
         <input type="email" name="" class="offer__form offer__form-email" placeholder="Email"/>
 
         <div class="offer__button">book now!</div>
         <div class="offer__comment"></div>
+        <div class="offer__arrow"></div>
     </div>
 </div>
 </body>
